create user service and add address route
