# server/api/controllers/user/controller.js
@@ -1,6 +1,15 @@
+import UserService from '../../services/user.service';
+
 export class Controller {
-  async updateProfile(req, res, next) {
+  async addAddress(req, res, next) {
     try {
+      const { address } = req.body;
+      if (address.length === 0)
+        throw new Error({
+          message: 'Minimum one address is required',
+        });
+      const response = await UserService.addAddress(req.user.uid, address);
+      res.status(200).json(response);
     } catch (error) {
       return next(error);
     }
