# server/api/controllers/user/routes.js
@@ -1,0 +1,7 @@
+import express from 'express';
+import authHandler from '../../middlewares/auth.handler';
+import controller from './controller';
+
+export default express
+  .Router()
+  .post('/add-address', authHandler, controller.addAddress);
